--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <title>Estimator</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="Description" content="Developer: Bello Abdulmateen For: Build4SDG Assessment On: Covid-19 Impact Estimator. This is an application for estimating the impact of Covid-19 in any region of the world">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
